--- a/bpm-gallo.html
+++ b/bpm-gallo.html
@@ -121,9 +121,9 @@ La comida la compran semanal para ahorrar dinero en pasajes, cada persona paga 3
 las canoas tienen capacidad para unos 15 pasajeros. Si un habitante de Gallo por cualquier razón se queda
 después de esta hora, debe pagar unos doscientos mil pesos para que de manera expresa los lleven hasta su comunidad".</i>
  <br>
-<br>&nbsp;<br>
+
 <hr>
-<br>&nbsp;<br>
+
 
 <span class="image left">
 <h4>El trabajo</h4>
@@ -139,55 +139,49 @@ Los mulos llegaron en canoas y atravesaron las montañas e invitaron a su paso a
 <br>&nbsp;<br>
 
 <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/5BgVhgHr0zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br />
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i><b>Victor Solis. El trabajo del bibliotecario pata la Paz" </b></i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/fXtJOJX-5tM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i><b>Video de apoyo a las actividades <br>realizadas por la biblioteca <br>pública Gallo durante el 2017</i></b></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/NX3UdLLklHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i><b>"La comunidad de la zona se ha apropiado de la biblioteca móvil"</i> (Víctor Solís)</b></span></p>
-</td>
-</tr>
-</table>
+<div class="gallery">
+  <div>
+      <iframe src="https://www.youtube.com/embed/5BgVhgHr0zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>"Victor Solis. El trabajo del bibliotecario pata la Paz"</p>
+    </div>
+    <div>
+        <iframe src="https://www.youtube.com/embed/fXtJOJX-5tM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Video de apoyo a las actividades realizadas por la biblioteca pública Gallo durante el 2017</p>
+      </div>
+      <div>
+          <iframe src="https://www.youtube.com/embed/NX3UdLLklHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>"La comunidad de la zona se ha apropiado de la biblioteca móvil" (Víctor Solís)</p>
+        </div>
+</div>
 </div>
 
-
-
-
-<br>
 <center>
 <hr>
 </center>
-<br>
+
 <center>
 <h4><i>la "canoa literaria" y a la "muloteca"</i></h4>
 <p>La influencia de la <i>Biblioteca Pública para la Paz</i> se extendió a las comunidades indígeneas gracias a <br>a la "canoa literaria" y a la "muloteca"<p>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/nAhSxR8mppI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/sh5m9roLTto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/13-sT7PdmCk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/w7dQsyn9-90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="gallery">
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/nAhSxR8mppI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/sh5m9roLTto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/13-sT7PdmCk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/w7dQsyn9-90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</div>
 </center>
-<br>
+
 <center>
 <hr>
 </center>
-<br>
 
 <span class="image left">
 <h4><i>"Gallo Hagamos Cine"</i></h4>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/Victor5.png" width="293" height="172" />
-<br>
+
 </span>
 <br>&nbsp;<br>
 Una de las actividades con más repercusión entre la comunidad fue la organización de talleres de capacitación (apropiación) tecnológicas solicitados por los usuarios y organizados por Victor.
@@ -197,78 +191,58 @@ como un canal de expresión colectiva en toda la región.<br>
 Aquí pueden ver los resultados de la serie titulada <i>"Gallo Hagamos Cine"</i>
 <br>&nbsp;<br>
 
-<div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/pwr4-7uZzbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i>01. Servicio Innovador Gallo Hagamos Cine. 2 minutos </i></span></p>
-</td>
-<td style="border-width : 0px;">
-<video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/sx8ugy3t9qxzqvk5o9wt0e9i2cwovgw7.mp4" style="width: 300px;" loop=""></video>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i>01 Gallo Hagamos Cine 2: La Gente del Maíz - eXpedición Sinú  | Tierralta Córdoba. 10'59"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/HY_pvvoZiiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i>02 Gallo Hagamos Cine 2: Algo Bueno Está Pasando - eXpedición Sinú | Tierralta Córdoba</i> (Víctor Solís)</span></p>
-</td>
-</tr>
-</table>
-</div>
-<br>
+<section>
+  <div class="gallery">
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/pwr4-7uZzbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>01. Servicio Innovador Gallo Hagamos Cine. 2 minutos</p>
+    </div>
+    <div>
+        <video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/sx8ugy3t9qxzqvk5o9wt0e9i2cwovgw7.mp4" style="width: 300px;" loop=""></video>
+        <p>01 Gallo Hagamos Cine 2: La Gente del Maíz - eXpedición Sinú  | Tierralta Córdoba. 10'59"</p>
+    </div>
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/HY_pvvoZiiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>02 Gallo Hagamos Cine 2: Algo Bueno Está Pasando - eXpedición Sinú | Tierralta Córdoba</p>
+    </div>
+  </div>
+</section>
+
 <h4>La serie: <i>"Gallo. como nunca lo habías visto"</i></h4>
 Para entender la génesis de esta serie lea este articulo <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Victorcine.pdf"><b><i>Gallo como nunca lo habías visto, la serie documental que muestra la otra cara de esta región</i></b></a> publicado por Lina Otálvaro <i>En Red</i>, número 12, mayo del 2018. páginas 26-30.
- <br>&nbsp;<br>
-<div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/somnko4mx97r9fmc2j9y571ftkirsiwd.mp4" style="width: 400px;" loop=""></video> </span>
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i>01. Gallo, Un Pedacito de Colombia 3' 56"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/qqjvlrVRvSk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i>02. Agua Dulce. 15' 26"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/RyAK-lMtb8U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<BR><i>03. Se habla costeñol. 19' 57"</i></span></p>
-</td>
-</tr>
-<tr>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/HKqCjH4cLyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i>4. Soy leyenda. 11'10"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/hyVguW61G_s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i>05 Crónicas de PAZ en el ETCR Gallo. 10'34"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/dm9ku2ayw5vt048aa061545whvu202u7.mp4" style="width: 400px;" loop=""></video>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i>06 Sobre los Guarumos</i> 20' 06"</span></p>
-</td>
-</tr>
-</table>
-</div>
 
-<br>
+<section>
+  <div class="gallery">
+    <div>
+        <video controls="true" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/somnko4mx97r9fmc2j9y571ftkirsiwd.mp4" loop=""></video>
+        <p>01. Gallo, Un Pedacito de Colombia 3' 56"</p>
+    </div>
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/qqjvlrVRvSk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>02. Agua Dulce. 15' 26"</p>
+    </div>
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/RyAK-lMtb8U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>03. Se habla costeñol. 19' 57"</p>
+    </div>
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/HKqCjH4cLyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>4. Soy leyenda. 11'10"</p>
+    </div>
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/hyVguW61G_s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>05 Crónicas de PAZ en el ETCR Gallo. 10'34"</p>
+    </div>
+    <div>
+        <video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/dm9ku2ayw5vt048aa061545whvu202u7.mp4" style="width: 400px;" loop=""></video>
+        <p>06 Sobre los Guarumos</p>
+    </div>
+  </div>
+</section>
+
 <center>
 <hr>
 </center>
-<br>
 <h4><i>Mas fotos de actividades</i></h4>
 <center>
 
