--- a/indexenglish.html
+++ b/indexenglish.html
@@ -107,7 +107,8 @@
 <section class="menu">
 <UL>
 <p align="center"><b>Organizers: </b>
-<li><b><a target="_blank" href="http://spanitalport.as.virginia.edu/people/profile/mes2tf">Mathilda Shepard</a>, Graduate PhD Student, Spanish -- University of Virginia</b></li>
+<li><b>Diana Patricia Cuesta León, Office Representative of<a target="_blank" href="http://www.rettalibros.com/">Retta Libros</a> en Colombia</b></li> 
+<li><b><a target="_blank" href="http://spanitalport.as.virginia.edu/people/profile/mes2tf">Mathilda Shepard</a>, PhD Student, Spanish -- University of Virginia</b></li>
 <li><b><a target="_blank" href="http://history.virginia.edu/people/profile/hb3r">Hebert (Tico) Braun</a>, Associate Professor, History -- University of Virginia</b></li>
 <li><b><a target="_blank" href="https://www.library.virginia.edu/staff/mav4n/">Miguel Valladares Llata</a>, Research Librarian for Global Studies -- University of Virginia</b></li></center>
 </ul>
