correct salalm url

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <p align="center"><b>Con el apoyo insitucional de:</b>
  <br>&nbsp;<br>
 <a target="_blank" href="https://www.library.virginia.edu/"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logouva.jpg" width="159" height="129" alt="" /></a>
-  |  <a target="_blank" href="http://salam.org"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logosalalm.jpg" width="88" height="152" alt="" /> <br>
+  |  <a target="_blank" href="https://salalm.org/"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logosalalm.jpg" width="88" height="152" alt="" /> <br>
 </section>
 <section class="menu">
 <p align="center"><b>Con el apoyo económico de:</b>
