--- a/indexenglish.html
+++ b/indexenglish.html
@@ -94,11 +94,11 @@
 <p align="left">Some of these projects resonate beyond Colombia as they inspire other Latin American and European countries to launch their own initiatives. Projects like the <a target="_blank" href="http://blog.nomono.co/tag/bibliotecariosalsenado/">#BibliotecariosAlSenado</a> movement--which, since February 2017, promotes democratic access to information in Colombia--and the <a target="_blank" href="https://www.museocasadelamemoria.gov.co/"> Historical Memory Center </a> of the city of Medellín, which is helping to turn what was considered the world capital of violence into an authentic beacon of Colombian culture, have had a had a global impact throughout Latin America.</p>
 <p align="left">At SALALM 2019 in Austin, we want to present precisely one of these internationally-relevant projects. The Libraries for Peace program, which crystallized in early 2017 with support from the National Library of Colombia, has become a global point of reference for how libraries can intervene in effective ways to mitigate the effects of violence in societies affected by conflict. The model has emerged thanks to a purely humanistic proposal.</p>
 
-<p align="left">With this web page, we intend to offer you an introduction to the Libraries for Peace initiative, not only with the desire to illustrate this experience, but also to motivate your participation in the panel that we have organized for June 28 at 10:30 a.m.
+<p align="left">With this web page, we intend to introduce the Libraries for Peace initiative, not only to illustrate this experience, but also to motivate your participation in the panel that we have organized for June 28 at 10:30 a.m.
 <p align="left">Come and take part! You are all invited ...<br>
 <i>Miguel Angel Valladares Llata</i></p>
 
-<h4> <a href="https://bibliopaz.scholarslab.org/mesa-redonda-2019english">See information about the Round Table</a></h4>
+<h4> <a href="https://bibliopaz.scholarslab.org/mesa-redonda-2019english">More information about the Round Table</a></h4>
 </header>
 </div>
 </section>
