--- a/bpm-conejo.html
+++ b/bpm-conejo.html
@@ -73,7 +73,7 @@
 <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 50px 0px 50px;">
 <table width="50%" border="1" cellpadding="0" cellspacing="0">
 <tr valign="top">
-<td><center><img align src="https://virginia.box.com/shared/static/z92y76d3sbq8wl5lec6l8oet4veir0ov.jpg" width="260" height="260" /></center><br>
+<td><center><img align src="https://drive.google.com/file/d/15bZjMe-Xa5Iq1sofBo9WcXpPT1pdggRO/view?usp=sharing" width="260" height="260" /></center><br>
 <ul>
 Gilberto nos cuenta:<br>
 <i>"Soy gestor cultural y promotor de lectura con estudios en derecho de la Universidad Libre.
