--- a/bpm-historiaenglish.html
+++ b/bpm-historiaenglish.html
@@ -61,6 +61,10 @@
 
   <header>
     <h2>History of Mobile Public Libraries for Peace" </h2>
+  </header>
+
+  <section class="wrapper style3">
+  <div class="inner">
 
   <center>
   <div class="image"><img src="http://people.virginia.edu/~mav4n/BPMP/images/historia02.jfif" width="475" height="315" alt="Los 20 bibliotecarios. Foto: Daniel Reina" /></div><br>
@@ -69,23 +73,20 @@
   Picture published in Arcadia, Bogota, ISSN: 1900-589X. February 8, 2017
   </div>
   </center>
-  </header>
-
-
-<section class="wrapper style3">
-<div class="inner">
+  
+  <br>
 
 <h2 id="biblioteca-pública-móvil-las-morras">The beginning</h2>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/jaramillo.png" alt="" />
 <i>The High Commissioner for Peace, Sergio Jaramillo, and the Minister of Culture, Mariana Garcés. Credit: Archive of the Ministry of Culture</i></span>
-On January 25, 2017, the Minister of Culture of Colombia, Mariana Garcés, and the High Commissioner for Peace, Sergio Jaramillo, presented the model of Mobile Libraries for Peace that was implemented in 20 Colombian rural areas. The Ministry of Culture purchased the library model from the French NGO Libraries Without Borders, investing two million dollars to acquire the facilities and finance its operation.
+On January 25, 2017, the Colombian Minister of Culture, Mariana Garcés, and the High Commissioner for Peace, Sergio Jaramillo, presented the Mobile Public Libraries for Peace program that was implemented in 20 Colombian rural areas. The Ministry of Culture purchased the model for the libraries from the French NGO Libraries Without Borders, investing two million dollars to acquire the facilities and finance their operation.
  <br>&nbsp;<br>
 
 <h2 align="right"><id="biblioteca-pública-móvil-las-morras">Places</h2>
 <p><span class="image right"><img src="http://people.virginia.edu/~mav4n/BPMP/images/mapa02.png" alt="" /></span>
-As of February 15, 2017, 20 libraries have been installed in villages in the municipalities of Dabeiba, Ituango and Remedios (Antioquia); Arauquita (Arauca); La Montañita and San Vicente del Caguán (Caquetá); Caldono and Miranda (Cauca); La Paz (Cesar); Tierralta (Córdoba); Riosucio (Chocó); San José del Guaviare (Guaviare); Fonseca (La Guajira); La Macarena, Mesetas and Vista Hermosa (Meta); Policarpa and Tumaco (Nariño); Puerto Asís (Putumayo), and Planadas (Tolima).
+As of February 15, 2017, 20 libraries have been installed in villages belonging to the municipalities of Dabeiba, Ituango and Remedios (Antioquia); Arauquita (Arauca); La Montañita and San Vicente del Caguán (Caquetá); Caldono and Miranda (Cauca); La Paz (Cesar); Tierralta (Córdoba); Riosucio (Chocó); San José del Guaviare (Guaviare); Fonseca (La Guajira); La Macarena, Mesetas and Vista Hermosa (Meta); Policarpa and Tumaco (Nariño); Puerto Asís (Putumayo), and Planadas (Tolima).
 <p align="left">
-Most of these libraries were installed in the so-called transitional normalization zones in the disarmament process with the FARC. The mobile libraries contributed to the building of trust in the communities through cultural content and the dissemination of reading. They contributed to the reconciliation by facilitating public spaces where the community meet to produce culture.
+Most of these libraries were installed near "Transitory Rural Zones for Normalization" (Zonas Veredales de Transición y Normalización, or ZVTN, in Spanish) that were constructed as part of the FARC's disarmament process. The mobile libraries contributed to the building of trust in communities through cultural content and reading programs. They contributed to reconciliation by providing public spaces where the community could connect and engage in cultural production.
 <br>Consult <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/BPMzonas.pdf"><b> map</b></a> for more detail</p>
 <br>&nbsp;<br>
 
@@ -96,26 +97,26 @@ Most of these libraries were installed in the so-called transitional normalizati
 <br>&nbsp;<br>
 <iframe width="400" height="300" src="https://www.youtube.com/embed/glCWsY1gYNQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </span><br>
-Each library is a <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Multimedia.pdf"><b> multimedia center </b></a> that can be transported on two standard plastic pallets. Within a space of between 50 and 100 square meters, they can cater to up to 50 people. On the other hand, they can be deployed in less than 20 minutes. In terms of content, each one has 380 physical books and more than 200 digital books, as well as 17 tablets, 15 digital book readers, 5 computers and 3 video cameras; a cinema system with built-in sound and more than 30 movies; a board game kit; an administrative system for reporting information and lending materials; a power plant and a server that generates an internal wireless network to connect the electronic devices of the library and internet access so that the populations of users can access an offering of employment and education.<br>&nbsp;<br>
+Each library is a <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Multimedia.pdf"><b> multimedia center </b></a> that can be transported on two standard plastic pallets. Within a space of between 50 and 100 square meters, they can serve up to 50 people. They can also be deployed in less than 20 minutes. In terms of content, each library has 380 physical books and more than 200 digital books, as well as 17 tablets, 15 digital book readers, 5 computers and 3 video cameras; a cinema system with built-in sound and more than 30 movies; a board game kit; an administrative system for reporting information and lending materials; a power plant and a server that generates an internal wireless network to connect the library's electronic devices and internet access so that users can access employment and educational content.<br>&nbsp;<br>
 
 <h2 align="right"><id="biblioteca-pública-móvil-las-morras">The material</h2>
 <p><span class="image right"><img src="http://people.virginia.edu/~mav4n/BPMP/images/aula.png" alt="" /><br>
-<i>Photo courtesy of Henry Garcia Gaviria</i></span>
-As for books, the selection was made by a committee comosed of CERLALC, the National Library and the National Network of Public Libraries. In addition to including the titles of a printed basic list, which includes classic authors such as Gabriel García Márquez, a series of pedagogical workshops with the communities and ex-combatants was developed jointly with the Office of the High Commissioner for Peace to find out what they wanted.
+<i>Photo courtesy of Henry García Gaviria</i></span>
+As for books, the selection was made by a committee composed of CERLALC, the National Library and the National Network of Public Libraries. In addition a standard offering of titles by classic authors such as Gabriel García Márquez, books were selected through a series of pedagogical workshops with the communities and ex-combatants developed jointly with the Office of the High Commissioner for Peace.
 <p>
-<i>"We realized that above all they wanted books related to topics such as rural development, trades, entrepreneurship, gender, history of Colombia and Latin America"</i> (Henry García)
+<i>"We realized that above all they wanted books related to topics such as rural development, trade, entrepreneurship, gender, Colombian and Latin American history"</i> (Henry García)
 
 
-<h2 id="biblioteca-pública-móvil-las-morras">The transport of libraries</h2>
+<h2 id="biblioteca-pública-móvil-las-morras">Transporting the Libraries</h2>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/AltoSinu.png" alt="" />  <br>
-<i>In Alto Sinu on the road to El Gallo. <br>Photo courtesy of Henry Garcia Gaviria</i>
+<i>In Alto Sinú on the road to El Gallo. <br>Photo courtesy of Henry Garcia Gaviria</i>
 <br>&nbsp;<br>
 <iframe width="420" height="295" src="https://www.youtube.com/embed/3azzkjOEeyE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br> <i>Mobile Public Libraries reach communities, March 16, 2017</i> </span>
 <br>
-Although in some cases the territory does not present difficulties, in others it represents an enormous challenge. For example, to arrive to the path to La Florida, in Chocó, the librarian will have to travel first to Quibdó, then move by boat for 6 hours to the municipality of Riosucio, and from there walk for at least two hours on a route that is more or less walkable.
+Although in some cases the territory does not present difficulties, in others it represents an enormous challenge. For example, to access La Florida, in Chocó, the librarian will have to travel first to Quibdó, then navigate by boat for 6 hours to the municipality of Riosucio, and from there walk for at least two hours on a path that is more or less passable.
 <br>&nbsp;<br>
-<i>"In Colombia, the colored boxes are called Mobile Public Libraries. They will be in 20 of the 26 <i> "veredas" </i> that host the FARC guerrillas in their transition to civilian life. In these places, each of these Mobile Libraries will lend its services to the community and will carry out the activities of library extension to the camps of the ex-combatants. The culture will be one of the first visible faces in this process of peace ...
+<i>"In Colombia, the colored boxes are called Mobile Public Libraries. They will be in 20 of the 26 <i> "veredas" </i> that host the FARC guerrillas in their transition to civilian life. In these places, each of these Mobile Libraries will lend its services to the community and will carry out library extension activities to the ex-combatant camps. Culture will be one of the first visible faces in this peace process ...
 <br>
 ... We stop at a gas station to refill the car, unload our bladders and stretch our legs a little. Fatigue is impossible to conceal, but the desire to reach our destination is greater than exhaustion. The sky, previously dark, is slowly painted with a palette of colors that starts with a soft orange, which briefly turns into a shade of pink that, in turn, is diluted into a very light blue that darkens as one looks up. Dawn is near ... Did the horrible night end? "</i>
   <br>&nbsp;<br>
@@ -128,7 +129,7 @@ Excerpt from <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/doc
 
 <p>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/TSpBnq50VAo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="200" height="150" src="https://mdstrm.com/embed/5913786bad3651bb0805f8f1?player=589b13f631f1bebd088ff756" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="200" height="150" src="https://mdstrm.com/embed/5913786bad3651bb0805f8f1?player=589b13f631f1bebd088ff756" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/5RNmmU0mJUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/c7uz1lGnOLM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="200" height="150" src="https://www.youtube.com/embed/xNOyAHQWCQ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -144,19 +145,19 @@ From left to right<br>
 <h2 align="left"><id="biblioteca-pública-móvil-las-morras">One year later</h2>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/infra2.png" alt="" />  <br>
 <iframe width="420" height="295" src="https://www.youtube.com/embed/BmLjo-GZwd8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<b>"Sin miedo"</b>, composed by <i>Dinastía Vallenata</i> with which they won the 2017 call for stimuli of mobile public libraries. The video clip includes a pleasant description of the formation and activities of the Mobile Public Library, of Conejo, Fonseca, La Guajira. One of the librarians that made up the team of this mobile library is among us in SALALM, <a href="https://bibliopaz.scholarslab.org/bpm-conejo.html"><b>Gilberto Pabón Sandoval. </b></a>
+<b>"Sin miedo"</b>, a song composed by <i>Dinastía Vallenata</i> that won them the 2017 Mobile Libraries for Peace Stimulus Prize. The video clip enthusiastically describes the formation and activities of the Mobile Public Library in Conejo (Fonseca), La Guajira. One of the librarians who made up this library's original team, <a href="https://bibliopaz.scholarslab.org/bpm-conejo.html"><b>Gilberto Pabón Sandoval</b></a>, is among us in SALALM. 
 <p>
-<i>"The Mobile Public Libraries 'Reading is my story' have become meeting places and have played a decisive role in reconciliation and peace building, as evidenced by the measurement of its social impact that was carried out by the National Center for Consulting. The report reveals how, only between March 1 and October 31, 2017, the innovative library services initiative, which operates in the 20 Territorial Training and Reintegration Spaces, received 176,313 visits to the activities programmed in 176. In addition, 16 writers and journalists advanced Writing and Reading Promotion Workshops with rural communities and ex-combatants.
+<i>"The Mobile Public Libraries 'Reading is my Story' have become meeting places and have played a decisive role in reconciliation and peacebuilding, as evidenced by the measure of its social impact carried out by the National Center for Consulting. The report reveals that between March 1 and October 31, 2017, the innovative library services initiative, which operates in 20 Territorial Spaces for Training and Reintegration, received 176,313 visits to the activities programmed in 176. In addition, 16 writers and journalists led writing and reading promotion workshops with rural communities and ex-combatants.
 <br>
-These and other surprising data were released on Thursday, November 23 by [who was then] the Director of the National Library of Colombia, Consuelo Gaitán, from Caldono, Cauca, during the presentation of the national evaluation of the entire project, "One year with the Public Mobile Libraries", an initiative that is operating in rural communities and in the camps in which ex-guerrillas have prepared for their transit to civil life, specifically in thirteen departments of the country: Antioquia, Arauca, Caquetá, Cauca, Cesar, Guaviare , Meta, Nariño, Putumayo, Tolima, Chocó, Córdoba and La Guajira. ... "</i>
+These and other surprising data were released on Thursday, November 23 in Caldono, Cauca by the [then] Director of the National Library of Colombia, Consuelo Gaitán. The event marked the presentation of the national evaluation of the entire project, "One year with the Public Mobile Libraries", an initiative that is operating in rural communities and in the camps in which ex-guerrillas have prepared for their transit to civil life, specifically in thirteen departments of the country: Antioquia, Arauca, Caquetá, Cauca, Cesar, Guaviare , Meta, Nariño, Putumayo, Tolima, Chocó, Córdoba and La Guajira. ... "</i>
 <p>
  <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Evaluacion1.pdf"><b>Read the full news article</b></a> published on November 23, 2017 by the Ministry of Culture of Colombia.
 <p>
 You can read also the report published in October 2017 in which the results of the first year were presented: <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Evaluacion2.pdf"><b> "1 year building peace through reading, art and culture" </b></a> <p>
 <p>
-On Thursday, November 23, 2017, in the village of Andalucía in the municipality of Caldono (Cauca), a stocktaking was done of what has been this first year of work of the 20 Mobile Public Libraries for Peace, in the different territories of the country that were affected by violence for decades. One of these libraries is in Caldono, which for months has been led by librarian Lucely Narváez and today has been welcomed by the entire community. Watch the videos of the presentation of the national stocktaking "One year with the Mobile Public Libraries" held on Thursday, November 23, 2017, from Caldono, Cauca.
+On Thursday, November 23, 2017, in the village of Andalucía in the municipality of Caldono (Cauca), an assessment was done of what has been this first year of work of the 20 Mobile Public Libraries for Peace, in the different territories of the country that were affected by violence for decades. One of these libraries is in Caldono, which for months has been led by librarian Lucely Narváez and today has been welcomed by the entire community. Watch the videos of the national assessment "One year with the Mobile Public Libraries" held on Thursday, November 23, 2017, from Caldono, Cauca.
 <br>&nbsp;<br>
-<b>On the left the entire meeting is retransmitted (30 min.) And on the right is a summary in 4 minutes.<b>
+<b>On the left the entire meeting is retransmitted (30 min.), and on the right is a summary in 4 minutes.<b>
 <br>&nbsp;<br>
 <iframe width="400" height="300" src="https://www.youtube.com/embed/QgwbjOV20bo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="400" height="300" src="https://www.youtube.com/embed/e-2lA2bW_XQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -170,7 +171,7 @@ On the left a brief 5-minute video entitled  <b><i> "Impact Assessment February 
 <div class="inner">
 
 <h2 align="left"><id="biblioteca-pública-móvil-las-morras">Images that make history</h2>
-Carousel of Photographs
+Photo Gallery
 <p><span class="image center"><video controls="true" width="400px" height="300px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/9hu7j2z53ce2srqspr72fw71mpbwqhqg.mp4" style="width: 400px;" loop=""></video> </span>
 
 </div>
